--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ tests/auto/qml/qmldesigner/coretests/tst_qmldesigner_core
 tests/auto/qml/qmldesigner/propertyeditortests/tst_propertyeditor
 tests/auto/profilewriter/tst_profilewriter
 src/tools/cplusplus/generate-ast
+src/tools/qml/qmldump/qmldump
