--- a/share/qtcreator/translations/extract-customwizards.xq.in
+++ b/share/qtcreator/translations/extract-customwizards.xq.in
@@ -1,6 +1,8 @@
 let $files := ( $$CUSTOMWIZARD_FILES )
 let $prefix := string(\"QT_TRANSLATE_NOOP(&quot;ProjectExplorer::CustomWizard&quot;, &quot;\")
 let $suffix := concat(\"&quot;)\", codepoints-to-string(10))
+where empty($files)
+return
 for $file in $files
     let $doc := doc($file)
     for $text in ($doc/*:wizard/*:description, $doc/*:wizard/*:displayname, $doc/*:wizard/*:displaycategory, $doc/*:wizard/*:fieldpagetitle, $doc/*:wizard/*:fields/*:field/*:fielddescription)
