The .bin postfix was removed from the qtcreator executable
When the wrapper script was removed in 2bd2373b38f4.

--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,7 @@ doc/api/html/*
 # Binaries
 # --------
 bin/*.dll
-bin/qtcreator.bin
+bin/qtcreator
 bin/qtcreator_process_stub*
 bin/qtcreator.exe
 share/doc/qtcreator/qtcreator.qch
