add fine-grained ts-<lang> targets
the old ts target is now named ts-all, and it will update even the files
which are disabled from compilation/release.

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ Thumbs.db
 *.Release
 
 # translation related:
+share/qtcreator/translations/*_tr.h
 
 # Directories to ignore
 # ---------------------
