Added tests for the InsertionPointLocator and fixed bugs.

--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,7 @@ share/doc/qtcreator/qtcreator.qch
 tests/manual/cplusplus/cplusplus0
 tests/manual/cplusplus-dump/cplusplus0
 tests/manual/qml-ast2dot/qml-ast2dot
+tests/auto/cplusplus/codegen/tst_codegen
 tests/auto/qml/qmldesigner/bauhaustests/tst_bauhaus
 tests/auto/qml/qmldesigner/coretests/tst_qmldesigner_core
 tests/auto/qml/qmldesigner/propertyeditortests/tst_propertyeditor
