--- a/.gitignore
+++ b/.gitignore
@@ -85,4 +85,5 @@ tests/auto/qml/qmldesigner/coretests/tst_qmldesigner_core
 tests/auto/qml/qmldesigner/propertyeditortests/tst_propertyeditor
 tests/auto/profilewriter/tst_profilewriter
 src/tools/gen-cpp-ast/generate-ast
+src/tools/mkvisitor/cplusplus0
 src/tools/qml/qmldump/qmldump
